<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<jp.sakira.peintureroid.APView  
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent" 
  android:id="@+id/apview" />
<LinearLayout android:layout_width="fill_parent" 
  android:layout_height="fill_parent" android:orientation="vertical" 
		android:id="@+id/control" 
		android:fadingEdge="none" android:fadingEdgeLength="0sp" 
		android:padding="0sp"
		android:scrollbars="none">
  <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" 
    android:orientation="horizontal">
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" 
    		android:id="@+id/layer_button" android:text="L:0"></Button>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" 
    		android:id="@+id/width_button" android:text="W:10"></Button>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" 
    		android:id="@+id/color_button" android:text="@string/Col"></Button>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" 
    		android:id="@+id/density_button" android:text="D:0.50"></Button>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" 
    		android:id="@+id/change_pen_button" android:text="P#1"></Button>
    <View
      android:layout_width="wrap_content"
      android:layout_height="1dp"
      android:layout_weight="1"
    />
    <Button
      android:text="info"
      android:onClick="showAboutAlert"
      android:textSize="12sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  </LinearLayout>

  <TextView
    android:id="@+id/message_area"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/DrawMode" />

  
  <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" 
  	android:orientation="vertical" 
    android:padding="10dp"
  		android:id="@+id/optional_controls">

  </LinearLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom|center_vertical"
    android:orientation="vertical" >

  <SeekBar android:id="@+id/zoom_slider"
    android:max="1600"
    android:visibility="invisible"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"/>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" >

      <RadioGroup
          android:id="@+id/mode_buttons"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checkedButton="@+id/draw_mode_button"
          android:orientation="horizontal" >

          <RadioButton
              android:id="@id/draw_mode_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:onClick="DrawMode"
              android:text="@string/Draw"
              android:textColor="#888"
              android:textSize="16sp" />

          <RadioButton
              android:id="@+id/shift_mode_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:onClick="ShiftMode"
              android:text="@string/Shift"
              android:textColor="#888"
              android:textSize="16sp" />
      </RadioGroup>

      <ImageButton
          android:id="@+id/redo_button"
          android:layout_width="44dp"
          android:layout_height="44dp"
          android:layout_alignParentRight="true"
          android:contentDescription="redo"
          android:background="#0000"
          android:onClick="redoButtonPressed"
          android:src="@drawable/redo_button" />

      <TextView
          android:id="@+id/undo_label"
          android:layout_width="wrap_content"
          android:layout_height="44dp"
          android:layout_toLeftOf="@id/redo_button"
          android:gravity="center"
          android:layout_margin="5dp"
          android:lines="2"
          android:textAlignment="center"
          android:text="@string/Undo"/>

      <ImageButton
          android:id="@+id/undo_button"
          android:layout_width="44dp"
          android:layout_height="44dp"
          android:layout_toLeftOf="@id/undo_label"
          android:background="#0000"
          android:contentDescription="undo"
          android:onClick="undoButtonPressed"
          android:src="@drawable/undo_button" />
      
  </RelativeLayout>

</LinearLayout>
<RelativeLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >
  <View android:id="@+id/spuit_view"
    android:layout_width="50dp"
    android:layout_height="50dp" />
  <jp.sakira.peintureroid.CalibrationView 
    android:id="@+id/calibration_view"
    android:visible="false"
    android:layout_width="100dp"
    android:layout_height="100dp" />

</RelativeLayout>

</FrameLayout>
